# DH2323-project

./: .clang-format  .gitignore  ProjectSubmission.sh  README.md
blog/: README.md  entry_01.md
docs/: dipole.md
img/: README.md  combine_cornell.py  convert.py
img/bunny/: combine_bunny.py
img/cornell/: combine_cornell.py
img/diana/: combine_diana.py
include/: Camera.hpp  CornellBox.hpp  IRayTracer.hpp  Light.hpp  StanfordBunny.hpp  Triangle.hpp  Window.hpp
report/: .gitignore  ProjectReport.synctex(busy)  ProjectReport.tex  ProjectSpecification.tex  README.md  main.bbl  main.tex  references.bib
specification/: README.md  main.tex
src/: BVH.cpp  BVH.hpp  CMakeLists.txt  Camera.hpp  CornellBox.cpp  CornellBox.h  CornellBox.hpp  Dipole.cpp  DipoleShader.cpp  DipoleShader.hpp  Lambertian.cpp  LambertianShader.cpp  LambertianShader.hpp  Light.hpp  Material.cpp  Material.hpp  Model.cpp  Model.h  Model.hpp  ObjModel.cpp  ObjModel.hpp  PlyModel.cpp  PlyModel.hpp  README.md  Shader.hpp  SlabIntersectionTest.cpp  StanfordBunny.cpp  StanfordBunny.hpp  Texture.cpp  Texture.hpp  Triangle.hpp  Window.cpp  Window.h  Window.hpp  WireframeShader.cpp  WireframeShader.hpp  config.hpp  main.cpp
src/include/: Camera.hpp  CornellBox.hpp  IRayTracer.hpp  LambertianShader.hpp  Light.hpp  StanfordBunny.hpp  Triangle.hpp  Window.hpp  WireframeShader.hpp
src/model/: CornellBox.cpp  CornellBox.hpp  Model.cpp  Model.hpp  ObjModel.cpp  ObjModel.hpp  PlyModel.cpp  PlyModel.hpp
src/render/: BVH.cpp  BVH.hpp  Material.cpp  Material.hpp  Texture.hpp  Window.hpp
src/shader/: DipoleHelper.hpp  DipoleShader.cpp  DipoleShader.hpp  LambertianShader.cpp  LambertianShader.hpp  Shader.cpp  Shader.hpp  WireframeShader.cpp  WireframeShader.hpp
src/util/: Triangle.hpp
